--- a/GameeEngineMario.uproject
+++ b/GameeEngineMario.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.26",
+	"EngineAssociation": "{DA99B7BC-488A-F522-8E5C-5BB71EA48146}",
 	"Category": "",
 	"Description": ""
 }
